--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,13 @@ div.split+ div.split {
 }
 span.fname-inner {
 	padding: 0 1px;
-	min-width: 1em;
-	height:32px;
-	line-height:32px;
-	outline:none;
+	height: 32px;
+	line-height: 32px;
+	outline: none;
 	background-color: black;
+}
+[contenteditable=true]:empty:before {
+	content: attr(placeholder);
 }
 span.fname-outer {
 	display: flex
